Update docs. -  Update js docs to v0.11.0 -  Update react docs to v0.4.0 -  Add new 'build-your-own' client library docs page -  Update in-app instructions for js/react to match latest versions -  Fix url regex escaping bug in inline-script code

--- a/packages/docs/pages/api-docs.mdx
+++ b/packages/docs/pages/api-docs.mdx
@@ -50,5 +50,4 @@ We offer official client libraries that work with these data structures in a few
 *  [React](/lib/react)
 *  [PHP](/lib/php)
 *  [Ruby](/lib/ruby)
-*  Go - *coming soon*
-*  Python - *coming soon*
+*  [Build your own](/lib/build-your-own)
