--- a/packages/docs/pages/lib/react.mdx
+++ b/packages/docs/pages/lib/react.mdx
@@ -15,23 +15,28 @@ or
 ### Step 1: Configure your app 
 ```tsx
 import {
-  GrowthBookClient, GrowthBookProvider
+  GrowthBook, GrowthBookProvider
 } from '@growthbook/growthbook-react'
 
-// Create a client instance and setup tracking
-const client = new GrowthBookClient({
-  onExperimentViewed: ({experimentId, variationId}) => {
+// Create a GrowthBook instance
+const growthbook = new GrowthBook({
+  // The attributes you want to use to assign variations
+  user: {
+    id: "123"
+  },
+  // Called every time the user is put into an experiment
+  trackingCallback: (experiment, result) => {
     // Mixpanel, Segment, GA, or custom tracking
-    mixpanel.track("Experiment Viewed", {experimentId, variationId})
+    mixpanel.track("Experiment Viewed", {
+      experiment: experiment.key,
+      variation: result.variationId
+    })
   }
 });
 
-// Specify the user id you want to experiment on
-const user = client.user({ id: mixpanel.get_distinct_id() })
-
 export default function App() {
   return (
-    <GrowthBookProvider user={user}>
+    <GrowthBookProvider growthbook={growthbook}>
       <OtherComponent/>
     </GrowthBookProvider>
   )
@@ -39,6 +44,8 @@ export default function App() {
 ```
 
 ### Step 2: Run an experiment
+
+#### Hooks (recommended)
 
 ```tsx
 import { useExperiment } from '@growthbook/growthbook-react'
@@ -53,20 +60,32 @@ export default function OtherComponent() {
 }
 ```
 
-Use class components? We support that too!  [See Example](#react-class-components)
+#### Class Components
+
+**Note:** This library uses hooks internally, so still requires React 16.8 or above.
+
+```tsx
+import { withRunExperiment } from '@growthbook/growthbook-react';
+
+class MyComponent extends Component {
+  render() {
+    // The `runExperiment` prop is identical to the `useExperiment` hook
+    const {value} = this.props.runExperiment({
+      key: "headline-test",
+      variations: ["Hello World", "Hola Mundo"]
+    });
+    return <h1>{value}</h1>
+  }
+}
+// Wrap your component in `withRunExperiment`
+export default withRunExperiment(MyComponent);
+```
 
 ### Step 3: Analyze results
 
 Query your raw data, calculate significance, decide on a winner, and document your findings.
 
-Typically, this is done with one of the following:
-
-*  Online A/B testing calculators
-*  Built-in A/B test analysis in Mixpanel/Amplitude
-*  Python or R libraries and a Jupyter Notebook
-
-These are all pretty tedious to set up and maintain, which is why created the [Growth Book App](https://www.growthbook.io) 
-that automates all the messy and annoying bits and lets you focus on building your product.
+The easiest way to accomplish this is with the Growth Book App (https://github.com/growthbook/growthbook), but it's not required. You can use an online A/B test calculator or a Jupyter notebook if you prefer.
 
 ## Dev Mode
 
@@ -76,222 +95,8 @@ Dev Mode adds a variation switcher UI that floats on the bottom left of pages.  
 
 [View Live Demo](https://growthbook.github.io/growthbook-react/)
 
-![Dev Mode Variation Switcher](/images/variation-switcher.png)
+![Dev Mode Variation Switcher](variation-switcher.png)
 
-## Experiments
+## Configuration and Usage
 
-The simplest experiment you can define has just 2 fields: `key` and `variations`.
-
-There are a lot more configuration options you can specify.  Here is the full typescript definition:
-
--  **key** (`string`) - The globally unique tracking key for the experiment
--  **variations** (`any[]`) - The different variations to choose between
--  **weights** (`number[]`) - How to weight traffic between variations. Must add to 1.
--  **status** (`string`) - "running" is the default and always active. "draft" is only active during QA and development.  "stopped" is only active when forcing a winning variation to 100% of users.
--  **coverage** (`number`) - What percent of users should be included in the experiment (between 0 and 1, inclusive)
--  **url** (`string`) - Users can only be included in this experiment if the current URL matches this regex
--  **include** (`() => boolean`) - A callback that returns true if the user should be part of the experiment and false if they should not be
--  **groups** (`string[]`) - Limits the experiment to specific user groups
--  **force** (`number`) - All users included in the experiment will be forced into the specific variation index
--  **randomizationUnit** - What user attribute you want to use to assign variations (defaults to `id`)
-
-## Running Experiments
-
-The useExperiment hook returns an object with a few useful properties
-
-```ts
-const {inExperiment, variationId, value} = useExperiment({
-    key: "my-experiment",
-    variations: ["A", "B"]
-});
-
-// If user is part of the experiment
-console.log(inExperiment); // true or false
-
-// The index of the assigned variation
-console.log(variationId); // 0 or 1
-
-// The value of the assigned variation
-console.log(value); // "A" or "B"
-```
-
-The `inExperiment` flag can be false if the experiment defines any sort of targeting rules which the user does not pass.  In this case, the user is always assigned index `0`.
-
-### Example Experiments
-
-3-way experiment with uneven variation weights:
-```ts
-useExperiment({
-  key: "3-way-uneven",
-  variations: ["A","B","C"],
-  weights: [0.5, 0.25, 0.25]
-})
-```
-
-Slow rollout (10% of users who opted into "beta" features):
-```ts
-// User is in the "qa" and "beta" groups
-const user = client.user({id: "123"}, {
-  qa: isQATester(),
-  beta: betaFeaturesEnabled()
-});
-
-// Later in a component
-useExperiment({
-  key: "slow-rollout",
-  variations: ["A", "B"],
-  coverage: 0.1,
-  groups: ["beta"]
-})
-```
-
-Complex variations and custom targeting
-```ts
-const {value} = useExperiment({
-  key: "complex-variations",
-  variations: [
-    {color: "blue", size: "large"},
-    {color: "green", size: "small"}
-  ],
-  include: () => isPremium || creditsRemaining > 50
-});
-console.log(value.color, value.size); // blue,large OR green,small
-```
-
-Assign variations based on something other than user id
-```ts
-const user = client.user({
-  id: "123",
-  companyId: "abc"
-});
-
-// Later in a component
-useExperiment({
-  key: "by-company-id",
-  variations: ["A", "B"],
-  randomizationUnit: "companyId"
-})
-// Users in the same company will now always get the same variation
-```
-
-### Overriding Experiment Configuration
-
-It's common practice to adjust experiment settings after a test is live.  For example, slowly ramping up traffic, stopping a test automatically if guardrail metrics go down, or rolling out a winning variation.
-
-For example, to roll out a winning variation to 100% of users:
-```ts
-client.overrides.set("experiment-key", {
-    status: 'stopped',
-    force: 1
-});
-
-// Later in a component
-const {value} = useExperiment({
-  key: "experiment-key",
-  variations: ["A", "B"]
-});
-
-console.log(value); // Always "B"
-```
-
-The full list of experiment properties you can override is:
-*  status
-*  force
-*  weights
-*  coverage
-*  groups
-*  url
-
-This data structure can be easily seralized and stored in a database or returned from an API.  There is a small helper function if you have all of your overrides in a single JSON object:
-
-```ts
-const JSONFromDatabase = {
-  "experiment-key-1": {
-    "weights": [0.1, 0.9]
-  },
-  "experiment-key-2": {
-    "groups": ["everyone"],
-    "coverage": 1
-  }
-};
-
-client.importOverrides(JSONFromDatabase)
-```
-
-If you use the Growth Book App (https://github.com/growthbook/growthbook) to manage experiments, there's a built-in API endpoint you can hit that returns overrides in this exact format.  It's a great way to make sure your experiments are always up-to-date.
-
-## Event Tracking and Analyzing Results
-
-This library only handles assigning variations to users.  The 2 other parts required for an A/B testing platform are Tracking and Analysis.
-
-It's likely you already have some event tracking on your site with the metrics you want to optimize (Google Analytics, Segment, Mixpanel, etc.).
-
-For A/B tests, you just need to track one additional event - when someone views a variation.  
-
-```ts
-// Specify a tracking callback when instantiating the client
-const client = new GrowthBookClient({
-    onExperimentViewed: ({experimentId, variationId}) => {
-      // ...
-    }
-});
-```
-
-The object passed to your callback has the following properties:
--  experimentId (the key of the experiment)
--  variationId (the array index of the assigned variation)
--  value (the value of the assigned variation)
--  experiment (the full experiment object)
--  user (the full user object)
--  randomizationUnit (which user attribute was used to assign a variation)
-
-Below are examples for a few popular event tracking tools:
-
-### Google Analytics
-```ts
-ga('send', 'event', 'experiment', experimentId, variationId, {
-  // Custom dimension for easier analysis
-  'dimension1': `${experimentId}::${variationId}`
-});
-```
-
-### Segment
-```ts
-analytics.track("Experiment Viewed", {
-  experimentId,
-  variationId
-});
-```
-
-### Mixpanel
-```ts
-mixpanel.track("$experiment_started", {
-  'Experiment name': experimentId,
-  'Variant name': variationId
-});
-```
-
-## React Class Components
-
-If you aren't using functional components, we offer a `withRunExperiment` Higher Order Component instead.
-
-**Note:** This library uses hooks internally, so still requires React 16.8 or above.
-
-```tsx
-import {withRunExperiment} from '@growthbook/growthbook-react';
-
-class MyComponent extends Component {
-  render() {
-    // The `runExperiment` prop is identical to the `useExperiment` hook
-    const {value} = this.props.runExperiment({
-      key: "headline-test",
-      variations: ["Hello World", "Hola Mundo"]
-    });
-
-    return <h1>{value}</h1>
-  }
-}
-
-// Wrap your component in `withRunExperiment`
-export default withRunExperiment(MyComponent);
-```
+This package is a small React wrapper around the [javascript client library](/lib/js). Look at those docs for more info on how to configure your GrowthBook instance and define Experiments.
