--- a/packages/docs/pages/lib/index.mdx
+++ b/packages/docs/pages/lib/index.mdx
@@ -1,14 +1,12 @@
 # Client Libraries
 
-We offer official client libraries in a few popular languages with more coming soon:
+We offer official client libraries in a few popular languages:
 
 *  [Javascript/Typescript](/lib/js)
 *  [React](/lib/react)
 *  [PHP](/lib/php)
 *  [Ruby](/lib/ruby)
-*  Go - *coming soon*
-*  Python - *coming soon*
 
-It's not required to use these libraries.  You can do variation assignment yourself or use another library like PlanOut.
+There is also a guide if you want to [build your own](/lib/build-your-own).
 
-The only requirement is that you track in your datasource when users are put into an experiment and which variation they received.
+It's not required to use any of these libraries.  The only requirement is that you track in your datasource when users are put into an experiment and which variation they received.
