Add python client library

--- a/packages/docs/pages/api-docs.mdx
+++ b/packages/docs/pages/api-docs.mdx
@@ -50,4 +50,5 @@ We offer official client libraries that work with these data structures in a few
 *  [React](/lib/react)
 *  [PHP](/lib/php)
 *  [Ruby](/lib/ruby)
+*  [Python](/lib/python)
 *  [Build your own](/lib/build-your-own)
