--- a/packages/docs/pages/app/experiments.mdx
+++ b/packages/docs/pages/app/experiments.mdx
@@ -32,7 +32,7 @@ All of these rules are evaluated locally in your app at runtime and no HTTP requ
 ## Implementation
 
 There are generally two ways to implement experiments. 
-The first is using our [Visual Editor](/app/visual) and the second is using one of our [Client Libraries](/lib) (for Javascript, React, PHP, or Ruby).
+The first is using our [Visual Editor](/app/visual) and the second is using one of our [Client Libraries](/lib) (for Javascript, React, PHP, Ruby, or Python).
 
 It's also possible to use a completely custom implementation (or another library like PlanOut).
 The only requirement is that you track in your datasource when users are put into an experiment and which variation they received.
