--- a/packages/docs/pages/lib/index.mdx
+++ b/packages/docs/pages/lib/index.mdx
@@ -6,6 +6,7 @@ We offer official client libraries in a few popular languages:
 *  [React](/lib/react)
 *  [PHP](/lib/php)
 *  [Ruby](/lib/ruby)
+*  [Python](/lib/python)
 
 There is also a guide if you want to [build your own](/lib/build-your-own).
 
