Add ClickHouse as a supported datasource. Fixes #18

--- a/packages/docs/pages/app/datasources.mdx
+++ b/packages/docs/pages/app/datasources.mdx
@@ -9,6 +9,7 @@ Below are the currently supported Data Sources:
 -  Redshift
 -  Snowflake
 -  BigQuery
+-  ClickHouse
 -  AWS Athena
 -  Postgres
 -  Mixpanel
