--- a/packages/docs/pages/app/experiments.mdx
+++ b/packages/docs/pages/app/experiments.mdx
@@ -62,8 +62,7 @@ Each row of this table is a different metric.
 **Chance to Beat Control** tells you the probability that the variation is better. The closer this gets to 100%, the more likely the variation is better.  The closer it gets to 0% the more likely the variation is worse.
 Numbers in the middle are inconclusive and require more data.  We recommend waiting until it reaches 95% or 5% before deciding on a winner as a general rule of thumb.
 
-**Risk** quanitifies how risky a variation is.  If you choose the variation as a winner, but it ends up actually being worse (no matter how unlikely that is), the Risk will tell you how much you can expect to lose.
-The number is always negative and the closer it is to zero, the less you risk by switching.
+**Risk** tells you how much you will lose if you choose the variation as the winner, but it ends up actually being worse (no matter how unlikely that is).
 
 **Percent Change** shows how much better/worse the variation is compared to the control. It is a probability density graph and the thicker the area, the more likely the true percent change will be there.
 As you collect more data, the tails of the graphs will shorten, indicating more certainty around the estimates.
