Add open source installation instructions to the docs. Also add philosophy section to the docs homepage.

--- a/packages/docs/pages/index.mdx
+++ b/packages/docs/pages/index.mdx
@@ -2,8 +2,25 @@
 
 ![Growth Book: The Open Source A/B Testing Platform](/images/hero.png)
 
-Use the menu or the Previous/Next links at the bottom to navigate these docs.
+## Our Philosophy
 
-## Slack Community
+The top 1% of companies spend thousands of hours building their own A/B testing platforms in-house.
+The other 99% are left paying for expensive 3rd party SaaS tools or hacking together unmaintained open source libraries.
+
+Growth Book gives you the flexibility and power of a fully-featured in-house A/B testing platform without needing to build it yourself.
+
+We believe A/B testing should sit on top of your **existing data and metrics**, wherever they live and however they are defined.
+
+We believe in **data transparency**. Growth Book 
+tells you exactly how your data is being queried and our stats engine is developed out in the open on [GitHub](https://github.com/growthbook/growthbook/tree/main/packages/back-end/src/python/bayesian).
+
+We are fanatical about **performance**. Our [Client Libraries](/lib) are crazy fast and light-weight and evaluate everything locally with no network requests.
+
+We believe good ideas come from everywhere. Growth Book gives you **access controls** and guardrails to safely open up A/B testing to your entire organization.
+
+
+## Documentation
+
+Use the menu or the Previous/Next links at the bottom to navigate these docs.
 
 [Join us on Slack](https://join.slack.com/t/growthbookusers/shared_invite/zt-oiq9s1qd-dHHvw4xjpnoRV1QQrq6vUg) if you need help, want to chat, or are thinking of a new feature. We're here to help - and to make Growth Book even better.
