Improve typography of the docs

--- a/packages/docs/pages/app/index.mdx
+++ b/packages/docs/pages/app/index.mdx
@@ -4,12 +4,12 @@ The Growth Book App is a web application to manage your A/B tests and analyze re
 
 ## Installation
 
-<div class="bg-blue-200 dark:bg-blue-900 py-2 px-4 rounded flex">
-  <div class="text-yellow-500 pt-1 mr-3">
+<div className="bg-blue-200 dark:bg-blue-900 py-2 px-4 rounded flex">
+  <div className="text-yellow-500 pt-1 mr-3">
      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style={{fill:"currentColor"}}><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z"/></svg>
   </div>
-  <div>Don't want to install or host the app yourself? <a href="https://www.growthbook.io">Growth Book Cloud</a> is a fully managed version that's free to get started.</div>
-  <div class="text-yellow-500 pt-1 ml-3">
+  <div>Don't want to install or host the app yourself? <a href="https://app.growthbook.io">Growth Book Cloud</a> is a fully managed version that's free to get started.</div>
+  <div className="text-yellow-500 pt-1 ml-3">
      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style={{fill:"currentColor"}}><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z"/></svg>
   </div>
 </div>
